--- a/client/templates/proctor.html
+++ b/client/templates/proctor.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Proctoring Session</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/proctoring.css') }}">
 
 
 </head>
@@ -44,7 +44,7 @@
             </div>
         </div>
     </div>
-    <button id="endProctoringBtn" style="margin-top: 20px; display: block; margin-left: auto; margin-right: auto;">
+    <button id="endProctoringBtn" class="btn" onclick="endProctoring()">
         End Proctoring
     </button>
 
